# ChordLab

./: .gitignore  ASB 2.3 Bad moon risin' - E.txt  Bad moon risin' - E .cho  CMakeLists.txt  ChordLab spec V001.md  Have a wonderful and well-deserved.txt  MSB 2.1 Yesterday C-mod consolas.cho  Qt App Foundation & Architecture Review - Google Gemini.htm  README.md  Resaved Yesterday in F (V1).txt  _Yellow submarine [G 108 bpm].txt  app.rc  createsrc.bat  main.cpp  mainwindow.cpp  mainwindow.h  resources - Shortcut.lnk  resources.qrc  resources.qrc.txt  setlistmanager.cpp  setlistmanager.h
Qt App Foundation & Architecture Review - Google Gemini_files/: RotateCookiesPage.htm  gtm.js
backups/: main.cpp  mainwindow.cpp  mainwindow.h
backups - Copy/: ASB 2.5 The sound of silence Am C=5.txt  CHORDPRO SPECIFICATION.txt  CMakeLists.txt  MSB 2.1 Yesterday C.txt  Swing Low Sweet Chariot - Copy.txt  mainwindow.cpp  mainwindow.h
backups - Copy/Qt App Foundation & Architecture Review - Google Gemini_files/: bscframe.htm  m=_b  rs=AA2YrTscrfpjYlephp7nLsDy1CMPBWZ2ow
docs/: ###################################.txt  ASB 2.3 Bad moon risin' - E.txt  ChordLab spec V001A - 09-Jun-2026.md  ChordLabCode01JUN2026-12-58PM.txt  ChordLabCode31MAY2026.txt  ChordLabCodeSKELETON.txt  Hi Gemini, I have thought a bit abo.txt  MSB 2.5 Sound of silence Am V1.txt  Qt6 Video Player Development Plan - Google Gemini 05JUN2026_16-47 PM.htm  README.md  Swing Low Sweet Chariot - Copy.txt  Swing Low Sweet Chariot.txt  To set a custom application icon for a Qt 6.docx  __m_item - changes.txt  git_filter_repo.py  mainwindow05JUN26_15-09PM-A.txt  mainwindow05JUN26_15-09PM-B.txt
docs/Claude 11JUN2026/: ChordLab Qt6 setlist double-click crash - Claude.htm
docs/Qt6 Video Player Development Plan - Google Gemini 05JUN2026_16-47 PM_files/: RotateCookiesPage.htm  gtm.js  m=_b  (+1 more)
(+50 files in other folders)
